# quikin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/basis/: CMakeLists.txt  basis.h  face_basis.cpp  face_basis.h  volume_average.cpp  volume_average.h
src/data/: CMakeLists.txt  datachunk.cpp  datachunk.h  dataset.cpp  dataset.h  extended_datachunk.cpp  extended_datachunk.h  functions.h  shared_datachunk.cpp  shared_datachunk.h
src/example/: CMakeLists.txt
src/example/advection/: CMakeLists.txt  advect_gaussian.cpp  advect_gaussian.h
src/example/euler/: CMakeLists.txt  sod_shock_tube.cpp  sod_shock_tube.h
src/example/maxwell/: CMakeLists.txt  gaussian_pulse.cpp  gaussian_pulse.h  wave_1D.cpp  wave_1D.h
src/example/plasma/: CMakeLists.txt  gem_challenge.cpp  gem_challenge.h  harris_current_sheet.cpp  harris_current_sheet.h  two_fluid_brio_wu.cpp  two_fluid_brio_wu.h
src/grid/: CMakeLists.txt  grid.cpp  grid.h  rectilinear.cpp  rectilinear.h  structured.cpp  structured.h
src/lib/: CMakeLists.txt  exception.h  functions.h  indexer.cpp  indexer.h  indexer_interface.h  parallelization.h  qkfunctions.h  qkindexer.cpp  qkindexer.h  qkindexerinterface.cpp  qkindexerinterface.h  qkrange.cpp  qkrange.h  qkrangeset.cpp  qkrangeset.h  range.cpp  range.h  range_set.cpp  range_set.h
src/solver/: CMakeLists.txt  bc_conducting_wall.cpp  bc_conducting_wall.h  bc_copy_out.cpp  bc_copy_out.h  bc_free_slip.cpp  bc_free_slip.h  bc_no_slip.cpp  bc_no_slip.h  bc_periodic.cpp  bc_periodic.h  brio_wu_shock_tube.cpp  brio_wu_shock_tube.h  current_source.cpp  current_source.h  electromagnetic_wave_1D.cpp  electromagnetic_wave_1D.h  euler.cpp  euler.h  fill.cpp  fill.h  gaussian.cpp  gaussian.h  gem_challenge.cpp  gem_challenge.h  lorentz_force.cpp  lorentz_force.h  magnetic_pulse.cpp  magnetic_pulse.h  maxwell.cpp  maxwell.h  print.cpp  print.h  radial_shock_tube.cpp  radial_shock_tube.h  rk1.cpp  rk1.h  shock_tube.cpp  shock_tube.h  solver.h  (+6 more)
src/solvers/: CMakeLists.txt  advection.cpp  advection.h  qksolver.cpp  qksolver.h  qksolver_advection.cpp  qksolver_advection.h  qksolver_boltzmannbgk_1d2v_shocktube.cpp  qksolver_boltzmannbgk_1d2v_shocktube.h  qksolver_boltzmannbgk_1d2v_shocktube_var.cpp  qksolver_boltzmannbgk_1d2v_shocktube_var.h  solver.cpp
src/spatial_solver/: CMakeLists.txt  advection.cpp  advection.h  functions.h
src/temporal_solver/: CMakeLists.txt  ssprk2.cpp  ssprk2.h
src/variable/: CMakeLists.txt  variable.cpp  variable.h  variable_id.cpp  variable_id.h  variable_manager.cpp  variable_manager.h
test/: CMakeLists.txt  test_interface.h
test/lib/: CMakeLists.txt  test_indexer.cpp  test_range.cpp
test/variable/: CMakeLists.txt  test_variable.cpp
